style.css
* {
    font-family: sans-serif;
}

a {

    text-decoration: none;
    color: #9ea4b2;


}

body {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    min-height: 100vh;

}

.header {
    background-color: rgb(74, 101, 95);
    display: flex;
    justify-content: space-between;
    padding: 3px 200px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
   }

#textlogo {
    font-family: 'Brush Script MT';
    color: white;
    font-size: 30px;
    margin: 0;

}

.links {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
}

.herolarge {
    background-color: rgb(74, 101, 95);
    padding: 50px 200px;
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
}

.hero {
    display: flex;
    flex-direction: column;
    padding: 20px;
    flex: 1;
}

.mainimage {
    display: flex;
    flex: 1;
    width: 500px;
    height: 300px;


}

.imagecards {
    padding: 50px 200px;
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.smallphotos {
    display: flex;
    justify-content:stretch;
    align-items: center;
    flex-direction: column;
    text-align: center;
    max-width: 200px;

}
.smallphotos
p {
    color: #9ea4b2;
}

.allcards {
    display: flex;

}

.quote {
    padding: 50px 380px;
    background-color: rgb(183, 192, 199);
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: center;
    align-items: center;
    
}

h1 {
    font: 48px bold white;
}

.cardtitle {   
    display: flex;
    margin-top: 0;
    margin-bottom: 50px;


}
.smallphoto {
    width: 100px;
    height: 100px;
    border-radius: 10px;
    border: 4px solid rgb(98, 176, 159);


}

.c2a {
    padding: 50px 200px;
    display: flex;
    flex: 1;
    flex-direction: column;
}
.c2acard {
    background-color: rgb(74, 101, 95);
    display: flex;
    padding: 20px;
    border-radius: 10px;
    justify-content: space-around;
    align-items: center;

}


.footer {
    background-color: rgb(74, 101, 95);
    margin-top: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.footer
p {
    font-size: 12px;
    color: #9ea4b2;

}

button {
    background-color: rgb(98, 176, 159);
    color: white;
    border-radius: 10px;
    width: 100px;
    height: 40px;
    border: none;

}

